--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 body{
     text-align:center;
+    /* background-image:url("bgimg.jpg"); */
+    z-index: -2;
+    /* background-color: #f99b45; */
 }
 .btn{
     height:200px;
@@ -7,9 +10,21 @@ body{
     border-radius:20%;
     /* height:6rem; */
     /* width:6rem; */
-    /* border:0.4rem solid black; */
-    border:10px solid black;
+    /* border:0.4rem solid lack; */
+    border:7px solid rgb(0, 0, 50);
     margin:1rem;
+}
+.heading{
+    color:crimson;
+    font-size: 4rem;
+    font-family: cursive;
+    text-shadow:0.1rem 0.1rem 1px rgb(0, 0, 50);
+}
+.sub-heading{
+    color:rgb(0, 0, 50);
+    font-size: 2rem;;
+    /* text-shadow:0.1rem 0.1rem 1px rgb(0, 0, 50); */
+
 }
 .btn-container{
     display:flex;
@@ -25,22 +40,40 @@ body{
 }
 .yellow{
     background-color:#f99b45;
+
+    box-shadow:1rem 1rem 1rem #f99c457e;
 }
 .red{
     background-color:#d95980;
+    box-shadow:1rem 1rem 1rem #d9597f7b;
 }
 .purple{
     background-color:gold;
+    box-shadow:1rem 1rem 1rem rgba(255, 217, 0, 0.503);
 }
 .green{
     background-color:#63aac0;
+    box-shadow:1rem 1rem 1rem #63aac07b;
 }
 
 /* jb btn flash krni */
 .flash{
     background-color:white;
+    z-index: 4;
 }
 
 .userFlash{
     background-color:green;
+    z-index: 6;
+}
+
+.navbar{
+    background-color:rgb(0, 0, 50);
+    margin: 0;
+}
+.navbar-head{
+    color:white;
+}
+.navbar-body{
+    color:rgba(255, 255, 255, 0.799);
 }
